<resources>
    <string name="app_name">FinalProject_CThru</string>
    <string name="sign_in_button">Sign In</string>
    <string name="password_hint">Type Your Password</string>
    <string name="email_hint">Type your Email</string>
    <string name="sign_up_text">Not registered yet? Sign Up</string>
    <string name="sign_in_text">Already registered? Login</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="password_confirm_hint">Retype Your Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_history">History</string>
    <string name="menu_home">Home</string>
    <string name="test_home_fragment">Ini Home Fragment</string>
    <string name="test_profile_fragment">Ini Profile Fragment\n</string>
    <string name="test_history_fragment">Ini History Fragment\n</string>


    <string name="maps">Maps</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!-- Login -->
    <string name="login_title">Ready to explore the world?</string>
    <string name="login_message">Please fill in your data here</string>
    <string name="message_main_page">Welcome to Dicoding StoryApp</string>
    <string name="greeting">Hello %1$s,</string>
    <string name="logout">Sign Out</string>


    <string name="start">start</string>
    <string name="skip">Skip</string>
    <string name="finish">finish</string>
    <string name="next">next</string>
    <string name="back">back</string>


    <string name="title_onboarding_1"> </string>
    <string name="description_onboarding_1">Welcome to Cthru, your trusted partner in eye health. </string>

    <string name="title_onboarding_2"> </string>
    <string name="description_onboarding_2">With our cutting-edge technology, it’s helps you detect cataracts early and easily from the comfort of your home.</string>

    <string name="title_onboarding_3"> </string>
    <string name="description_onboarding_3">Discover the effective treatments and ensure your eyes receive the care they need</string>

    <string name="title_onboarding_4"> </string>
    <string name="description_onboarding_4">You\'re all set to begin your journey. Take the first step towards healthier eyes today</string>

    <string name="retry">Run Again</string>

    <!-- Welcome  -->

    <string name="account_have">Dont have account?</string>
    <string name="account_create">Create Account</string>
    <string name="account_google">Continue With Google</string>

    <string name="email_login">Enter your email</string>
    <string name="email_wrong">Wrong email format</string>
    <string name="email_text_label">Use email correct format</string>
    <string name="email_taken">The email you entered is already registered, please change your email</string>
    <string name="failed_register">Registration failed, please try again</string>

    <string name="password_login">Enter your password</string>
    <string name="password_confirm">Confirm your password</string>
    <string name="password_forgot">Show Password?</string>
    <string name="password_less">Password must be at least 8 characters</string>
    <string name="password_NotMatch">Passwords don\'t match</string>
    <string name="password_AccountWrong">The password you entered is incorrect</string>

    <string name="register_name_title">Name</string>
    <string name="register_email_title">Email</string>
    <string name="register_password_title">Password</string>
    <string name="login_cv_email">Email</string>
    <string name="refresh">Refresh</string>
    <string name="changeLanguage">Change Language</string>

    <!-- Detail String -->
    <string name="detail_username">Firefly\n</string>
    <string name="detail_user_description">"Lorem ipsum dolor sit amet consectetur. Molestie vel ultrices diam tempus semper sit tincidunt eget blandit. Cras faucibus mattis tortor ut facilisi ullamcorper. Condimentum lectus elit nulla congue. In blandit purus maecenas quis risus volutpat habitant. Integer egestas arcu nunc netus sed lorem porttitor quis. "</string>
    <string name="detail_user_date">25 May 2024</string>

    <string name="upload_description">Add you description here</string>
    <string name="gallery">Gallery\n</string>
    <string name="camera">Camera</string>
    <string name="Upload">Upload\n</string>

    <string name="no_image_selected">No image selected</string>
    <string name="upload_image_description">Add text here</string>
    <string name="detail_title">%1$s Story</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="continue_with_google">Continue with Google</string>


    <!--  Upload Activity  -->
    <string name="image_warning">Upload Your Image First</string>
    <string name="camera_button">Start The Camera</string>
    <string name="gallery_button">Open the Gallery</string>
    <string name="analyze_button">Analyze</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu</string>
    <string name="hint">Search Your Article\n</string>


    <!--  Detail Article Activity  -->
    <string name="detail_title_article">Lorem ipsum dolor sit amet consectetur. Molestie vel ultrices diam tempus.</string>
    <string name="detail_desc_article">Lorem ipsum dolor sit amet consectetur. Molestie vel ultrices diam tempus semper sit tincidunt eget blandit. Cras faucibus mattis tortor ut facilisi ullamcorper. Condimentum lectus elit nulla congue. In blandit purus maecenas quis risus volutpat habitant. Integer egestas arcu nunc netus sed lorem porttitor quis</string>

    <!--  Result Article Activity  -->
    <string name="prediction_result">Prediction Result:</string>
    <string name="prediction_confidence">Prediction Confidence:</string>
    <string name="percent">0%</string>
    <string name="maps_link_buttom">Check the closest medical center</string>
    <string name="recommended_tips">Recommended Tips :</string>

    <!-- Tips 1   -->
    <string name="tips1_title">1. Memeriksakan kondisi mata secara rutin</string>
    <string name="tips1_detail">Orang dewasa dianjurkan untuk memeriksakan mata ke dokter setiap dua tahun sekali sampai usia 50 tahun. Di atas usia 50 tahun, Anda disarankan untuk memeriksakan mata setidaknya setahun sekali.
Sementara itu, orang dengan riwayat diabetes lebih berisiko mengalami penyakit mata sehingga disarankan untuk lebih sering memeriksakan kondisi mata.</string>

    <!-- Tips 2   -->
    <string name="tips2_title">2. Melindungi mata dari paparan sinar UV</string>
    <string name="tips2_detail">Paparan sinar ultraviolet pada mata dapat meningkatkan risiko terjadinya mata katarak. Selain itu, sinar UV juga bisa membuat katarak menjadi makin parah. Ini karena sinar ultraviolet dapat merusak protein di lensa mata.
Untuk mencegah mata katarak, hindari paparan sinar matahari langsung dengan menggunakan kacamata hitam atau topi lebar, terutama saat sedang beraktivitas di bawah terik matahari langsung.
Pilihlah kacamata hitam yang dapat memblokir setidaknya 99% sinar UV dan berukuran lebar, sehingga perlindungan yang Anda dapatkan maksimal.</string>

    <!-- Tips 3   -->
    <string name="tips3_title">3. Menghentikan kebiasaan merokok</string>
    <string name="tips3_detail">Kebiasaan merokok dapat meningkatkan risiko terkena mata katarak karena menciptakan lebih banyak radikal bebas di mata Anda. Guna menurunkan risiko mata katarak, Anda disarankan untuk mengurangi atau menghentikan kebiasaan merokok. Jika upaya ini terlalu berat, cobalah berkonsultasi dengan dokter.</string>

    <!--  Profile Fragment  -->
    <string name="user_profile">Andrew Nathan</string>
    <string name="title_email_profile">Email</string>
    <string name="email_profile">andrewnathan@gmail.com</string>
    <string name="title_number_profile">Phone Number</string>
    <string name="number_profile">081338275638</string>
    <string name="title_age_profile">Age</string>
    <string name="age_profile">26</string>
    <string name="google_profile">Connect with Google</string>
    <string name="language_profile">Language</string>
    <string name="darkmode_profile">Dark Mode</string>
    <string name="customer_profile">Customer Support</string>
    <string name="version_profile">Version Info</string>
    <string name="about_profile">About</string>
    <string name="logout_profile">Logout</string>
    <string name="settingpref_profile"><![CDATA[Settings & Preferences]]></string>
    <string name="settings_preferences"><![CDATA[Settings & Preferences]]></string>
    <string name="google_api">AIzaSyCNoFdxkWf5_zdAUTErL7QcenVDHAT6ntE</string>
    <string name="title_history">Today\'s Checkup\n</string>
    <string name="btn_check_history">Let\'s Get Started</string>
    <string name="log_history">Log History</string>

    <!--  History Fragment  -->

    <!--  Home Fragment  -->
    <string name="scan_home">Let\'s Get Started</string>
    <string name="let_s_check_it_up">Let\'s Check It Up</string>
    <string name="home_article">Article</string>
    <string name="home_see_more">See more</string>
    <string name="welcome_home">Welcome,</string>
    <string name="home_articles">Articles</string>
    <string name="user_home">User</string>


</resources>